--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
+
 @custom-variant dark (&:where(.dark, .dark *));
 
-@font-face {
-  font-family: 'Aquarium';
-  src: url('/fonts/aquarium.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
+.font-syncopate {
+  font-family: var(--font-syncopate);
+}
+
+.font-space {
+  font-family: var(--font-space-grotesk);
 }
